@@ -35,7 +35,7 @@ TEST_HOME=`pwd`
 WANT_BIN=$TEST_HOME/../../Main
 TRANS_BIN=$TEST_HOME/../../Transport
 TEST_NAME=Test8
-PSEUDO_LIST="C.blyp-mt.UPF  H.blyp-vbc.UPF"
+PSEUDO_LIST="C.pbe-van_bm.UPF  H.pbe-van_bm.UPF "
 
 #
 # evaluate the starting choice about what is to run 
@@ -97,25 +97,25 @@ fi
 # running DFT SCF
 #
 if [ "$SCF" = ".TRUE." ] ; then  
-   echo "running SCF calculation" 
-   $PARA_PREFIX  $DFT_BIN/pw.x $PARA_POSTFIX < $TEST_HOME/scf.in > $TEST_HOME/scf.out
+   echo "running SCF_US calculation" 
+   $PARA_PREFIX  $DFT_BIN/pw.x $PARA_POSTFIX < $TEST_HOME/scf_US.in > $TEST_HOME/scf_US.out
    if [ $? = 0 ] ; then 
       echo "done" 
    else
-      echo "found some problems in SCF calculation, stopping" ; exit 1
+      echo "found some problems in SCF_US calculation, stopping" ; exit 1
    fi
 fi
-   
+
 #
 # running DFT NSCF
 #
 if [ "$NSCF" = ".TRUE." ] ; then  
-   echo "running NSCF calculation" 
-   $PARA_PREFIX  $DFT_BIN/pw.x $PARA_POSTFIX < $TEST_HOME/nscf.in > $TEST_HOME/nscf.out
+   echo "running NSCF_US calculation" 
+   $PARA_PREFIX  $DFT_BIN/pw.x $PARA_POSTFIX < $TEST_HOME/nscf_US.in > $TEST_HOME/nscf_US.out
    if [ $? = 0 ] ; then 
       echo "done" 
    else
-      echo "found some problems in NSCF calculation, stopping" ; exit 1
+      echo "found some problems in NSCF_US calculation, stopping" ; exit 1
    fi
 fi
 
@@ -123,13 +123,13 @@ fi
 # running DFT PWEXPORT
 #
 if [ "$PWEXPORT" = ".TRUE." ] ; then  
-   echo "running PWEXPORT calculation" 
+   echo "running PWEXPORT_US calculation" 
    $PARA_PREFIX  $DFT_BIN/pw_export.x $PARA_POSTFIX  \
-              <  $TEST_HOME/pwexport.in > $TEST_HOME/pwexport.out
+              <  $TEST_HOME/pwexport_US.in > $TEST_HOME/pwexport_US.out
    if [ $? = 0 ] ; then 
       echo "done" 
    else
-      echo "found some problems in PWEXPORT calculation, stopping" ; exit 1
+      echo "found some problems in PWEXPORT_US calculation, stopping" ; exit 1
    fi
 fi
 
@@ -137,12 +137,12 @@ fi
 # running DISENTANGLE
 #
 if [ "$DISENTANGLE" = ".TRUE." ] ; then  
-   echo "running DISENTANGLE calculation" 
-   $WANT_BIN/disentangle.x < $TEST_HOME/want.in > $TEST_HOME/disentangle.out
+   echo "running DISENTANGLE_US calculation" 
+   $WANT_BIN/disentangle.x < $TEST_HOME/want_US.in > $TEST_HOME/disentangle_US.out
    if [ ! -e CRASH ] ; then 
       echo "done" 
    else
-      echo "found some problems in DISENTANGLE calculation, stopping" ; cat CRASH ; exit 1
+      echo "found some problems in DISENTANGLE_US calculation, stopping" ; cat CRASH ; exit 1
    fi
 fi
 
@@ -150,12 +150,12 @@ fi
 # running WANNIER
 #
 if [ "$WANNIER" = ".TRUE." ] ; then  
-   echo "running WANNIER calculation" 
-   $WANT_BIN/wannier.x < $TEST_HOME/want.in > $TEST_HOME/wannier.out
+   echo "running WANNIER_US calculation" 
+   $WANT_BIN/wannier.x < $TEST_HOME/want_US.in > $TEST_HOME/wannier_US.out
    if [ ! -e CRASH ] ; then 
       echo "done" 
    else
-      echo "found some problems in WANNIER calculation, stopping" ; cat CRASH ; exit 1
+      echo "found some problems in WANNIER_US calculation, stopping" ; cat CRASH ; exit 1
    fi
 fi
 
@@ -163,13 +163,14 @@ fi
 # running HAMILTONIAN
 #
 if [ "$HAMILTONIAN" = ".TRUE." ] ; then  
-   echo "running HAMILTONIAN calculation" 
-   $WANT_BIN/hamiltonian.x < $TEST_HOME/hamiltonian.in > $TEST_HOME/hamiltonian.out
+   echo "running HAMILTONIAN_US calculation" 
+   $WANT_BIN/hamiltonian.x < $TEST_HOME/hamiltonian_US.in > $TEST_HOME/hamiltonian_US.out
    if [ ! -e CRASH ] ; then 
       echo "done" 
    else
-      echo "found some problems in HAMILTONIAN calculation, stopping" ; cat CRASH ; exit 1
+      echo "found some problems in HAMILTONIAN_US calculation, stopping" ; cat CRASH ; exit 1
    fi
+   rename RHAM. RHAM_US. RHAM*
 fi
 
 #
@@ -188,5 +189,12 @@ fi
 # exiting
 echo "run.sh : everything done"
 exit 0
+
+
+
+
+
+
+
 
 
