@@ -9,39 +9,39 @@
 /
 
 &SUBSPACE
-   win_max = 0.0
-   dimwann = 17
+   win_max = 0.5
+   dimwann = 15
 !   start_mode_dis = 'lower_states'
-!   maxiter_dis = 0
+   maxiter_dis = 5000
 /
 
 &LOCALIZATION
-   maxiter0_wan = 100
-   maxiter1_wan = 1500
+!   start_mode_wan = 'randomized'
+   maxiter0_wan = 50
+   maxiter1_wan = 4450
    ncg = 5    
-   nshells = 2  
+   nshells = 1  
    nwhich(1) = 1  
-   nwhich(2) = 3  
-   ordering_mode = 'none'
 /
 
-WANNIER_CENTERS {angstrom}
-1gauss      -3.362   1.313   1.658    0   0 3  0.2     ! *** wf on H
-1gauss      -2.121   3.460   1.653    0   0 3  0.2
-1gauss       0.359   3.459   1.631    0   0 3  0.2
-1gauss       1.598   1.311   1.612    0   0 3  0.2
-1gauss       0.357  -0.836   1.616    0   0 3  0.2
-1gauss      -2.123  -0.835   1.639    0   0 3  0.2
-1gauss      -0.881   2.525   1.645    0   0 3  0.5     ! *** wf on the C-C bond (sigma)
-1gauss       0.169   1.918   1.633    0   0 3  0.5
-1gauss       0.169   0.705   1.622    0   0 3  0.5
-1gauss      -0.881   0.100   1.625    0   0 3  0.5
-1gauss      -1.932   0.707   1.637    0   0 3  0.5
-1gauss      -1.932   1.919   1.648    0   0 3  0.5
-1gauss      -1.581   2.525   1.645    1   0 3  0.5     ! *** wf on C (p_z)
-1gauss      -0.181   2.524   1.633    1   0 3  0.5
-1gauss       0.518   1.311   1.622    1   0 3  0.5
-1gauss      -0.182   0.099   1.625    1   0 3  0.5
-1gauss      -1.582   0.100   1.637    1   0 3  0.5
-1gauss      -2.282   1.313   1.648    1   0 3  0.5
+WANNIER_CENTERS {bohr}
+1gauss    -5.332809448    2.481211424    3.123718739     0 0 3  1.0
+1gauss    -3.497884274    5.655007362    3.116159439     0 0 3  1.0
+1gauss    -1.664849401    4.770615578    3.097262383     0 0 3  1.0   
+1gauss    -3.650007248    3.626385689    3.111435413     0 0 3  1.0
+1gauss     0.168185651    5.653118134    3.084034204     0 0 3  1.0
+1gauss     0.318418950    3.623551369    3.075530529     0 0 3  1.0
+1gauss     1.999330997    2.477432013    3.055688381     0 0 3  1.0
+1gauss     0.317474097    1.332257509    3.067971706     0 0 3  1.0
+1gauss     0.165351093   -0.696364343    3.062302589     0 0 3  1.0
+1gauss    -1.666739106    0.188027859    3.082144737     0 0 3  1.0
+1gauss    -3.500719070   -0.694474578    3.095372677     0 0 3  1.0
+1gauss    -3.650952339    1.335092068    3.103876591     0 0 3  1.0
+atomic   2   1 0      ! *** Cpz
+atomic   4   1 0 
+atomic   6   1 0 
+atomic   8   1 0 
+atomic  10   1 0 
+atomic  12   1 0 
+
 
